align fixed for project section

--- a/responsive.css
+++ b/responsive.css
@@ -47,6 +47,8 @@
     box-shadow: -5px 5px 10px rgba(0, 0, 0, 0.171);
     z-index: 777;
     border-radius: 10px 0px 0px 10px;
+    transition: 6s ease;
+    transition-property: left;
     
     
     }
