--- a/style.css
+++ b/style.css
@@ -36,7 +36,8 @@ body {
     left: 0px;
     backdrop-filter: blur(15px);
     z-index: 999;
-    transition: .5s ease;
+    transition: 6s ease;
+    transition-property: left;
 }
 
 .navbar .left {
@@ -327,6 +328,7 @@ body {
     align-items: center;
     justify-content: center;
     margin-bottom: 30px;
+    padding: 0 200px;
 }
 
 .project {
